fix:  cursor state in light and dark mode icon on hover

--- a/styles/output.css
+++ b/styles/output.css
@@ -612,6 +612,10 @@ button:is(.dark *) {
   width: 100%;
 }
 
+.cursor-pointer {
+  cursor: pointer;
+}
+
 .flex-col {
   flex-direction: column;
 }
